@@ -12,5 +12,6 @@ my @right_ret = ('CHOROBA', 'DANIELR', 'DANPEDER', 'DOUGLISH', 'HIHIK',
 	'HOLCAPEK', 'HPA', 'JANPAZ', 'JANPOM', 'JENDA', 'JIRA', 'JSPICAK', 'KLE',
 	'KOLCON', 'MAJLIS', 'MICHALS', 'MILSO', 'MJFO', 'PAJAS', 'PASKY', 'PEK',
 	'POPEL', 'PSME', 'RUR', 'RVASICEK', 'SEIDLJAN', 'SKIM', 'SMRZ', 'STRAKA',
-	'TKR', 'TRIPIE', 'TYNOVSKY', 'VASEKD', 'YENYA', 'ZABA', 'ZEMAN', 'ZOUL');
+	'TKR', 'TRIPIE', 'TYNOVSKY', 'VARISD', 'VASEKD', 'YENYA', 'ZABA', 'ZEMAN',
+	'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
