@@ -1,4 +1,5 @@
 0.24
+ - Add VARISD CPAN account.
  - Update author github username.
  - Update author name.
 
